(Raster)

fix obscure menu bug :)

-------------------------------------------------------------------------------

Sun Oct 10 12:49:28 PDT 1999
(Raster)

add sanity checks to the installation...

-------------------------------------------------------------------------------

Sun Oct 10 13:45:49 PDT 1999
(Mandrake)

added a configure option to disable the animation on iconification.
autosaves, too.
default is ON when creating a new iconbox.

-------------------------------------------------------------------------------

Sun Oct 10 14:18:14 PDT 1999
(Raster)

too much checking.........

-------------------------------------------------------------------------------

Sun Oct 10 14:19:19 PDT 1999
(Raster)

move it there.........

-------------------------------------------------------------------------------

Sun Oct 10 16:05:48 PDT 1999
(Raster)

move coord box to the right place...

-------------------------------------------------------------------------------

Sun Oct 10 20:02:50 PDT 1999
(Mandrake)

a minor change in ShinyMetal.  typo

-------------------------------------------------------------------------------

Sun Oct 10 20:28:44 PDT 1999
(Mandrake)

changed the default direction to DOWN

-------------------------------------------------------------------------------

Mon Oct 11 09:31:19 PDT 1999
(Raster)

patch from dave mason to fix minor spelling mistakes :)

-------------------------------------------------------------------------------

Mon Oct 11 09:46:02 PDT 1999
(Raster)

add logout soudn when u have have libSM :)

-------------------------------------------------------------------------------

Mon Oct 11 11:27:12 PDT 1999
(KainX)

Undid the naughty part of an earlier patch.  Also eliminated an
unnecessary variable while I was at it.

-------------------------------------------------------------------------------

Wed Oct 13 12:24:18 PDT 1999
(Raster)

um... ipc bug.. DONT reply for the rememebr ipc... oh and spawn snapped 
commands later :)